# desktop_pet

./: Cargo.toml  README.md  TODO.md  messages.txt  reminders.txt
assets/: bubble2.png~  parrot _low.png.kra
src/: main.rs  scheduler.rs  utils.rs
