[package]
name = "parrot-pet"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.1"
winapi = "0.3.9"
windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
] }
fontdue = "0.8.0"
